--- a/level2.html
+++ b/level2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style3.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src ="./js/jQuery.js" defer></script>
     <script src = "./js/app2.js" defer></script>
     <title>Level 2</title>
