--- a/level5.html
+++ b/level5.html
@@ -21,5 +21,8 @@
     </div>
   
 </div>
+
+<button onclick='window.location.replace("./index.html")' id="give-up">Return to Start Page</button>
+
 </body>
 </html>
