--- a/level1.html
+++ b/level1.html
@@ -25,5 +25,7 @@
 <div id ="linkhp"></div>
 <div id ="items"></div>
 
+<button onclick='window.location.replace("./index.html")' id="give-up">Return to Start Page</button>
+
 </body>
 </html>
