--- a/level3.html
+++ b/level3.html
@@ -34,5 +34,8 @@
   
 <div id ="linkhp"></div>
 <div id ="items"></div>
+
+<button onclick='window.location.replace("./index.html")' id="give-up">Return to Start Page</button>
+
 </body>
 </html>
