--- a/level4.html
+++ b/level4.html
@@ -31,5 +31,8 @@
     </div>
   
 </div>
+
+<button onclick='window.location.replace("./index.html")' id="give-up">Return to Start Page</button>
+
 </body>
 </html>
