--- a/level6.html
+++ b/level6.html
@@ -52,6 +52,7 @@
   
 </div>
 
+<button onclick='window.location.replace("./index.html")' id="give-up">Return to Start Page</button>
 
 </body>
 </html>
