--- a/level1.html
+++ b/level1.html
@@ -23,6 +23,7 @@
 
 </div>
 <div id ="linkhp"></div>
+<div id= "weapon"></div>
 <div id ="items"></div>
 
 <button onclick='window.location.replace("./index.html")' id="give-up">Return to Start Page</button>
