improves menu bar, adds NPC dialogue on level 1

--- a/level6.html
+++ b/level6.html
@@ -52,6 +52,12 @@
   
 </div>
 
+<section id = "menu">
+  <div id ="linkhp"></div>
+  <div id= "weapon"></div>
+  <div id ="items"></div>
+</section>
+
 <button onclick='window.location.replace("./index.html")' id="give-up">Return to Start Page</button>
 
 </body>
