--- a/level1.html
+++ b/level1.html
@@ -22,9 +22,11 @@
   </div>
 
 </div>
-<div id ="linkhp"></div>
-<div id= "weapon"></div>
-<div id ="items"></div>
+<section id = "menu">
+  <div id ="linkhp"></div>
+  <div id= "weapon"></div>
+  <div id ="items"></div>
+</section>
 
 <button onclick='window.location.replace("./index.html")' id="give-up">Return to Start Page</button>
 
