--- a/level2.html
+++ b/level2.html
@@ -12,15 +12,15 @@
     
 <div id="board"></div>
 
-<div id="battle" class="popup">
+<!-- <div id="battle" class="popup">
 
-    <!-- popUp content -->
-    <div class="popup-content">
+    popUp content -->
+    <!-- <div class="popup-content">
       <span class="close">&times;</span>
-      <p id ="words">battle is going on</p>
+      <article id ="play-by-play"></article>
     </div>
   
-  </div>
+</div> -->
   
   <section id = "menu">
     <div id ="linkhp"></div>
