added secret area

--- a/level1.html
+++ b/level1.html
@@ -17,8 +17,7 @@
 
   <!-- popUp content -->
   <div class="popup-content">
-    <span class="close">&times;</span>
-    <p id ="words">You're gonna need a weapon if you're going in there.</p>
+    <p id ="words"></p>
   </div>
 
 </div>
