--- a/level3.html
+++ b/level3.html
@@ -12,24 +12,14 @@
     
 <div id="board"></div>
 
-<div id="battle1" class="popup">
+<div id="talk" class="popup">
 
-    <!-- popUp content -->
-    <div class="popup-content">
-      <span class="close">&times;</span>
-      <p id ="words">battle is going on</p>
-    </div>
-  
-</div>
+  <!-- popUp content -->
+  <div class="popup-content">
+    <span class="close">&times;</span>
+    <p id ="words"></p>
+  </div>
 
-<div id="battle2" class="popup">
-
-    <!-- popUp content -->
-    <div class="popup-content">
-      <span class="close">&times;</span>
-      <p id ="words">battle is going on</p>
-    </div>
-  
 </div>
   
 <section id = "menu">
