--- a/secret.html
+++ b/secret.html
@@ -5,13 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <script src ="./js/jQuery.js" defer></script>
-    <script src = "./js/app4.js" defer></script>
-    <title>Level 4</title>
+    <script src = "./js/secret.js" defer></script>
+    <title>Secret area</title>
 </head>
 <body>
     
-<div id="board"></div>
+<div id="secret"></div>
 
+<!-- The popUp -->
+<div id="talk" class="popup">
+
+  <!-- popUp content -->
+  <div class="popup-content">
+    <p id ="words"></p>
+  </div>
+
+</div>
 <section id = "menu">
   <div id ="linkhp"></div>
   <div id= "weapon"></div>
