fixes secret area, some item descriptions

--- a/endgame2.html
+++ b/endgame2.html
@@ -19,7 +19,7 @@
 
     <h3 style = "color: silver">This is the silver ending</h3>
     
-<button onclick='window.location.replace("./level1.html")' class="p1" id="start-game">Start over</button>
+<button onclick='window.location.replace("./index.html")' class="p1" id="start-game">Start over</button>
 
 </main>
 
