--- a/endgame1.html
+++ b/endgame1.html
@@ -19,7 +19,7 @@
 
 <h3 style ="color: gold">This is the gold ending</h3>
     
-<button onclick='window.location.replace("./level1.html")' class="p1" id="start-game">Start over</button>
+<button onclick='window.location.replace("./index.html")' class="p1" id="start-game">Start over</button>
 
 </main>
 
