adds index page text

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <main>
 <section class="p1" id ="title-page"> 
     
-    <h1>A Title</h1>
-    <h3>words</h3>
-    <p>words and</p>
-    <p>words</p>
+    <h1>The Legend of Nelda</h1>
+    <h3>A Link to Copyright Infringement</h3>
+    <p style="color: silver">In a faraway land lies the tomb of Nelda, a powerful wizard</p>
+    <p style="color: silver">Our hero sets forth to claim her spellbook, and any other fine treasures he can discover</p>
     
 <button onclick='window.location.replace("./level1.html")' class="p1" id="start-game">Start</button>
 
