adds sprites, adds sounds, finalizes readme

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Some kind of title</title>
+    <title>The Legend of Nelda</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="./icon.ico" type="image/x-icon"/ >
     <script src ="./js/jQuery.js" defer></script>
     <script src ="./js/master.js" defer></script>
     
@@ -18,8 +19,12 @@
     <h3>A Link to Copyright Infringement</h3>
     <p style="color: silver">In a faraway land lies the tomb of Nelda, a powerful wizard</p>
     <p style="color: silver">Our hero sets forth to claim her spellbook, and any other fine treasures he can discover</p>
-    
+
 <button onclick='window.location.replace("./level1.html")' class="p1" id="start-game">Start</button>
+
+    <p class="instruct">Instructions:  Use the arrow keys to move.  Click on characters and doors to interact. </p> 
+    <p class="instruct">If you approach an enemy, you will engage in battle automatically.</p>
+    <p class="instruct">Seek out weapons and items to improve your chances, and find that spellbook!</p>
 
 </main>
 
