--- a/level4.html
+++ b/level4.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="./icon.ico" type="image/x-icon"/ >
     <script src ="./js/jQuery.js" defer></script>
     <script src = "./js/app4.js" defer></script>
     <title>Level 4</title>
